Fix - download button visible behind earnings full screen plot

--- a/www/style.css
+++ b/www/style.css
@@ -202,7 +202,7 @@ html {
 
 .full-screen {
     position: fixed;
-    height: 99vh !important;
+    height: 100vh !important;
     width: 100vw !important;
     left: 0;
     top: 0;
